format client form

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,7 +5,23 @@
 </head>
 <body>
     <div>
-        <label for="name">Name: </label>
+        <label for="name">Name: </label><br>
+        <input id="name" type="text" [formControl]="name">
+    </div><br>
+    <div>
+        <label for="name">Email: </label><br>
+        <input id="name" type="text" [formControl]="name">
+    </div><br>
+    <div>
+        <label for="name">Address: </label><br>
+        <input id="name" type="text" [formControl]="name">
+    </div><br>
+    <div>
+        <label for="name">Password: </label><br>
+        <input id="name" type="text" [formControl]="name">
+    </div><br>
+    <div>
+        <label for="name">Repeat Password: </label><br>
         <input id="name" type="text" [formControl]="name">
     </div>
 </body>
