add form to meetings, update client variables

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,24 +5,24 @@
 </head>
 <body>
     <div>
-        <label for="name">Name: </label><br>
+        <label for="name">Name </label><br>
         <input id="name" type="text" [formControl]="name">
     </div><br>
     <div>
-        <label for="name">Email: </label><br>
-        <input id="name" type="text" [formControl]="name">
+        <label for="email">Email </label><br>
+        <input id="email" type="text" [formControl]="email">
     </div><br>
     <div>
-        <label for="name">Address: </label><br>
-        <input id="name" type="text" [formControl]="name">
+        <label for="address">Address </label><br>
+        <input id="address" type="text" [formControl]="address">
     </div><br>
     <div>
-        <label for="name">Password: </label><br>
-        <input id="name" type="text" [formControl]="name">
+        <label for="password">Password </label><br>
+        <input id="password" type="text" [formControl]="password">
     </div><br>
     <div>
-        <label for="name">Repeat Password: </label><br>
-        <input id="name" type="text" [formControl]="name">
+        <label for="repeat">Repeat Password </label><br>
+        <input id="repeat" type="text" [formControl]="repeat">
     </div>
 </body>
 </html>
