--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,1 +1,19 @@
-<p>meeting works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meetings</title>
+</head>
+<body>
+    <div>
+        <label for="topic">Meeting Topic </label><br>
+        <input id="topic" type="text" [formControl]="topic">
+    </div><br>
+    <div>
+        <label for="num">Number of People </label><br>
+        <input id="num" type="text" [formControl]="num">
+    </div><br>
+</body>
+</html>
