--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -7,18 +7,20 @@
     <title>Meetings</title>
 </head>
 <body>
-    <div>
-        <label for="topic">Meeting Topic </label><br>
-        <input id="topic" type="text" [formControl]="topic" placeholder="Enter Meeting Topic" autocomplete="off">
-    </div><br>
-    <div>
-        <label for="num">Number of People </label><br>
-        <input id="num" type="text" [formControl]="num" placeholder="Enter Number of People" autocomplete="off">
-    </div><br>
-    <div>
-        <label for="date">Date </label><br>
-        <input type="datetime-local">
-    </div><br>
-    <button class="button" type="submit">Register</button>
+    <form [formGroup]="meetingForm" (ngSubmit)="onSubmit()">
+        <div>
+            <label for="topic">Meeting Topic </label><br>
+            <input id="topic" type="text" formControlName="topic" placeholder="Enter Meeting Topic" autocomplete="off">
+        </div><br>
+        <div>
+            <label for="num">Number of People </label><br>
+            <input id="num" type="text" formControlName="num" placeholder="Enter Number of People" autocomplete="off">
+        </div><br>
+        <div>
+            <label for="date">Date </label><br>
+            <input type="datetime-local">
+        </div><br>
+        <button class="button" type="submit">Register</button>
+    </form>
 </body>
 </html>
